--- a/homepage.html
+++ b/homepage.html
@@ -24,7 +24,7 @@
 
     </div>
     <footer>
-        <p>Author: Hege Refsnes</p>
+        <p>TEST</p>
         <p><a href="mailto:hege@example.com">hege@example.com</a></p>
       </footer>
     <script src='js/effects.js'></script>
